; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-status.c_start_color.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-status.c_start_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_value = type { i32 }

@start_colors = common dso_local global %struct.lwan_value* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @start_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @start_color(i32 %0) #0 {
  %2 = alloca %struct.lwan_value, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load %struct.lwan_value*, %struct.lwan_value** @start_colors, align 8
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @status_index(i32 %5)
  %7 = getelementptr inbounds %struct.lwan_value, %struct.lwan_value* %4, i64 %6
  %8 = bitcast %struct.lwan_value* %2 to i8*
  %9 = bitcast %struct.lwan_value* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 %9, i64 4, i1 false)
  %10 = getelementptr inbounds %struct.lwan_value, %struct.lwan_value* %2, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  ret i32 %11
}

declare dso_local i64 @status_index(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
